Fixes #3974 - Modal backdrop not covering some UI parts.

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4066,6 +4066,7 @@ button.close {
   right: 0;
   left: 0;
   bottom: 0;
+  z-index: 1000;
   background-color: #000;
 }
 .modal-backdrop.fade {
